Updated CV + micro errors on HTML/CSS

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p>Logiciel permettant d'analyser des fichiers via interface graphique PyQt5. Permet d'afficher des informations telles que : 
                     <ul>
                         <li>Informations génériques du fichier (nom, chemin, taille, timestamps d'accès...)</li>
-                        <li>Hashs du fichier : MD5, SHA1, SHA256; mais aussi Fuzzy Hash MD5 pour analyse dynamique</li>
+                        <li>Hashs du fichier : MD5, SHA1, SHA256; mais aussi Fuzzy Hash SSDEEP pour analyse dynamique</li>
                         <li>Calcul de l'entropie de Shannon pour détecter chiffrements & obfuscations de code</li>
                         <li>Détection d'IoCs / Signatures via des règles YARA modifiables</li>
                         <li>Exportation des résultats d'analyses sous formats JSON, Markdown ou HTML</li>
@@ -202,7 +202,7 @@
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
             </a>
             <a href="https://github.com/Stark3rn" target="_blank" aria-label="GitHub">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" style="filter: brightness(0) invert(1);" alt="GitHub">
             </a>
             <a href="https://tryhackme.com/p/Stark3rn" target="_blank" aria-label="TryHackMe">
                 <img src="https://assets.tryhackme.com/img/favicon.png" alt="TryHackMe">
